# simple-cabocha

./: README.md  setup.cfg
src/: simple_cabocha.py
