[metadata]
name = simple-cabocha
version = 0.1.0
author = Keisuke Magara
description = "Use CaboCha with simple code."
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
url="https://github.com/Keisuke-Magara/simple-cabocha"

[options]
package_dir=
    =src
packages = find:
install_requires =
    cabocha-python

[options.packages.find]
where=src

